--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -35,3 +35,17 @@
  dorchia_channel_trade_desc:0 "Trade in Dorchean Isles is almost a neccesity. Dorchean States traded between themselves for centuries and, since relations with argenia started to get better, with Ethelnothdun and Anginneowu."
  dorchia_imperial_relations:0 "Imperial Relations"
  dorchia_imperial_relations_desc:0 "During Argenian raids on the Saelian Empire, the Emperor reached out to kings of Dorchia. And so, the Dorchean-Imperial alliance was born, based on mutual enemy of Argenia. This opened Dorchean states to the rest of the taedian world, which later helped us join the Saelian Church."
+
+ his_authority:0 "Authority"
+ his_authority_desc:0 "We will live under our ruler, just as humanity lives under Saletiarn."
+ his_humility:0 "Humility"
+ his_humility_desc:0 "There is no one in the world just as humble as Saletiarn."
+ his_bravery:0 "Bravery"
+ his_bravery_desc:0 "Even when retreating, Saletiarn is the braviest man on the battlefield."
+ his_kindness:0 "Kindness"
+ his_kindness_desc:0 "Saletiarn treats his friends with respect and even enemies of Saletiarn die quickly, thanks to His mercy."
+ his_generosity:0 "Generosity"
+ his_generosity_desc:0 "The gift of presence of Saletiarn is the greatest honor in the world."
+ his_ambition:0 "Ambition"
+ his_ambition_desc:0 "The dreams of Saletiarn are just as big as the World itself."
+ wirosepan_select_aspect:0 "Select Favoured Aspect of Saelius"
