--- a/localisation/TD_01_flavour_bohemia_l_english.yml
+++ b/localisation/TD_01_flavour_bohemia_l_english.yml
@@ -6,7 +6,7 @@
 
  bohemian_ideas:0 "Bohemian Ideas"
  bohemian_ideas_start:0 "Bohemian Traditions"
- bohemian_ideass_bonus:0 "Bohemian Ambitions"
+ bohemian_ideas_bonus:0 "Bohemian Ambitions"
  bohemia_bohemian_banking:0 "Bohemian Banking"
  bohemia_bohemian_banking_desc:0 "History of western banking is closely related to the economic history of Bohemia. As the old centre of the Empire and neutrality in most major conflicts has created a perfect conditions for banking do develop and innovate."
  bohemia_runga_valley:0 "Runga Valley"
