--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -17,6 +17,8 @@
  bilohian:0 "Bilohian"
  agellidian:0 "Agellidian"
  agellidian_religion_desc:0 "Idea of this faith was sparked by 15th century Altaciman poet and philosopher Ali Ibn Sumayya Agellid Al-Altaqadim who proposed that the Emperor Saelius was one of the Yaltazim prophets and his word should be treated as such. This belief became especially popular amongst the urban population in Novoregno between XVI and XVII centuries and, with the growing influence of Liemarianism, became state religilon."
+ wirosepan:0 "Wirosepan"
+ wirosepan_desc:0 "When the Saelian missionaries reached the Dorchean isles they had to take a new approach to their mission. They presented the Emperor Saelius as a god-like and omnipotent figure of a brave warrior seeking to establish his realm on earth. This idea quickly spread  even without the need of missionaries, but some time after the popularization of Universalist ideals in the isles it became a dying faith with little prospect of survival - unless someone shook the very foundation of Saelian church."
 
  yermic:0 "Yermic"
  YERMIC_CRUSADE:0 "Jihad"
