--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -61,7 +61,7 @@
 
  itonatilu_imperial_city:0 "Imperial city of 1425"
 
- holy_temple_itonatilu:0 "Holy Temple of 1455"
+ holy_temple_itonatilu:0 "Temple of Achtoteopan"
 
  grand_observatory:0 "Great Ilchan"
  grand_observatory_desc:0 "This magnificent observatory was build in the ancient times by the ancestors of Nalanak people, but it serves it function to this day"
