--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -604,8 +604,8 @@
  CIT:0 "Cittilatlan"
  CIT_ADJ:0 "Cittila"
 
- UEY:0 "Ueyaltepatl"
- UEY_ADJ:0 "Ueyaltepatli"
+ UEY:0 "Ueyaqnehuei"
+ UEY_ADJ:0 "Ueyaqnehueii"
 
  AHN:0 "Ahnoyas"
  AHN_ADJ:0 "Ahnoyasi"
