--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1169,7 +1169,7 @@
  PROV1168:0 "1168"
  PROV1169:0 "1169"
  PROV1170:0 "1170"
- PROV1171:0 "1171"
+ PROV1171:0 "Kuatipetl"
  PROV1172:0 "1172"
  PROV1173:0 "1173"
  PROV1174:0 "1174"
@@ -1213,7 +1213,7 @@
  PROV1212:0 "1212"
  PROV1213:0 "1213"
  PROV1214:0 "1214"
- PROV1215:0 "1215"
+ PROV1215:0 "Ompoqatl"
  PROV1216:0 "1216"
  PROV1217:0 "1217"
  PROV1218:0 "1218"
@@ -1407,7 +1407,7 @@
  PROV1406:0 "Yamhat"
  PROV1407:0 "Vinâqar"
  PROV1408:0 "Bruzhas"
- PROV1409:0 "1409"
+ PROV1409:0 "Siuatepetl"
  PROV1410:0 "1410"
  PROV1411:0 "1411"
  PROV1412:0 "1412"
@@ -1416,16 +1416,16 @@
  PROV1415:0 "1415"
  PROV1416:0 "1416"
  PROV1417:0 "1417"
- PROV1418:0 "1418"
+ PROV1418:0 "Sipakatli"
  PROV1419:0 "1419"
- PROV1420:0 "1420"
+ PROV1420:0 "Sokialte"
  PROV1421:0 "1421"
  PROV1422:0 "1422"
- PROV1423:0 "1423"
+ PROV1423:0 "Huacipeuh"
  PROV1424:0 "1424"
- PROV1425:0 "1425"
- PROV1426:0 "1426"
- PROV1427:0 "1427"
+ PROV1425:0 "Yankutlahk"
+ PROV1426:0 "Imixtekhla"
+ PROV1427:0 "Axoxopan"
  PROV1428:0 "1428"
  PROV1429:0 "1429"
  PROV1430:0 "1430"
@@ -1439,12 +1439,12 @@
  PROV1438:0 "1438"
  PROV1439:0 "1439"
  PROV1440:0 "1440"
- PROV1441:0 "1441"
+ PROV1441:0 "Nehuanal"
  PROV1442:0 "1442"
  PROV1443:0 "1443"
  PROV1444:0 "1444"
  PROV1445:0 "1445"
- PROV1446:0 "1446"
+ PROV1446:0 "Cittilatlan"
  PROV1447:0 "1447"
  PROV1448:0 "1448"
  PROV1449:0 "1449"
@@ -1453,8 +1453,8 @@
  PROV1452:0 "1452"
  PROV1453:0 "1453"
  PROV1454:0 "1454"
- PROV1455:0 "1455"
- PROV1456:0 "1456"
+ PROV1455:0 "Achtoteopan"
+ PROV1456:0 "Tepexichan"
  PROV1457:0 "1457"
  PROV1458:0 "1458"
  PROV1459:0 "1459"
@@ -2241,7 +2241,7 @@
  PROV2240:0 "2240"
  PROV2241:0 "2241"
  PROV2242:0 "2242"
- PROV2243:0 "2243"
+ PROV2243:0 "Yolkantl"
  PROV2244:0 "2244"
  PROV2245:0 "2245"
  PROV2246:0 "2246"
