--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -3,7 +3,7 @@
  argenia_ideas_start:0 "Argenian Traditions"
  argenia_ideas_bonus:0 "Argenian Ambition"
  idea_legacy_of_wymond:0 "Legacy of king Wymond"
- idea_legacy_of_wymond_desc:0 "Wymond is the name of legendary silvestrian conqueror of dorchean isles and considered as the first ruler of Argenian People. There are many myths and epic poems about his legacy and achievements, many of which revolve around his conquests, his trusted men and love for his nation."
+ idea_legacy_of_wymond_desc:0 "Wymond is the name of legendary Silvestrian conqueror of the Dorchean Isles and considered as the first ruler of Argenian People. There are many myths and epic poems about his legacy and achievements, many of which revolve around his conquests, his trusted men and love for his nation."
  idea_epic_poems:0 "Epic Poems"
  idea_epic_poems_desc:0 "Epic Poetry is not native to argenians, but incredibly important to our culture nonetheless, as they are not only glorious work of art, but also are used as a way to document important people, places, events and traditions. Many of them touch the topics of njunnialmmuk invasion, Wymondian conquest of dorchean isles, dynastic conflict in XIII century, and adventureous expeditions to Saelian Empire and beyond."
  idea_argenic_fishery:0 "Argenian Fishery"
