--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1168,7 +1168,7 @@
  PROV1167:0 "1167"
  PROV1168:0 "1168"
  PROV1169:0 "1169"
- PROV1170:0 "1170"
+ PROV1170:0 "Kuchax"
  PROV1171:0 "Kuatipetl"
  PROV1172:0 "1172"
  PROV1173:0 "1173"
