--- a/localisation/TD_01_flavour_liemarian_l_english.yml
+++ b/localisation/TD_01_flavour_liemarian_l_english.yml
@@ -30,4 +30,18 @@
  unite_liemarian_community:0 "Strengthen Liemarian Community"
  unite_liemarian_community_DESC:0 "Strength comes from unity, and so we must bring liemarians together and focus on the common enemy."
  
- 
+ liemarian.5.t:0 "The Wirosepan Resurgence"
+ liemarian.5.desc:0 "The dying faith of Wirosepan was originally only slightly adapted version of standard Saelian theology, but it soon became a whole new system of beliefs. While popular during its introduction to the isles, thanks to the efforts of dorchean nobility it was replaced by imperial model. This did not however eradicate the religion and during the age of reformation it entered its second golden age of popularity, being practiced not only by rural peasants but also scholars and nobility."
+ liemarian.5.a:0 "Interesting."
+ liemarian.5.b:0 "Very, very interesting..."
+ liemarian.5.t:0 "The Wirosepan Resurgence"
+ liemarian.5.desc:0 "The dying faith of Wirosepan was originally only slightly adapted version of standard Saelian theology, but it soon became a whole new system of beliefs. While popular during its introduction to the isles, thanks to the efforts of dorchean nobility it was replaced by imperial model. This did not however eradicate the religion and during the age of reformation it entered its second golden age of popularity, being practiced not only by rural peasants but also scholars and nobility."
+ liemarian.5.a:0 "Interesting."
+ liemarian.5.b:0 "Very, very interesting..."
+
+ liemarian.6.t:0 "The Wirosepan Resurgence"
+ liemarian.6.desc:0 "The dying faith of Wirosepan was originally only slightly adapted version of standard Saelian theology, but it soon became a whole new system of beliefs. While popular during its introduction to the isles, thanks to the efforts of dorchean nobility it was replaced by imperial model. This did not however eradicate the religion and during the age of reformation it entered its second golden age of popularity, being practiced not only by rural peasants but also scholars and nobility."
+ liemarian.6.a:0 "Interesting."
+ liemarian.6.b:0 "Very, very interesting..."
+
+ wirosepan_center_of_reformation:0 "Center of Restoration"
