--- a/localisation/TD_03_missions_generic_l_english.yml
+++ b/localisation/TD_03_missions_generic_l_english.yml
@@ -208,7 +208,7 @@
  td_missions.2.desc:0 "Our nation stands at the crossroad. As the power of [Root.GetName] and influence grows we need to decide what is the ambition of this magnificent nation."
  td_missions.2.a:0 "Continent-spanning empire"
  td_missions.2.b:0 "Local utopia"
- td_missions.2.c:0 "Heirs to the Saelian Empire"
+ td_missions.2.c:0 "Heirs to the Saelian Empire (WIP)"
  td_missions.3.t:0 "Economic Future of [Root.GetName]"
  td_missions.3.desc:0 "Our nation stands at the crossroad. As the power of [Root.GetName] and influence grows we need to decide what is the ambition of this magnificent nation."
  td_missions.3.a:0 "Production in our homeland"
