--- a/localisation/TD_01_flavour_colonial_l_english.yml
+++ b/localisation/TD_01_flavour_colonial_l_english.yml
@@ -1,39 +1,77 @@
 ﻿l_english:
  TD_new_world_colonial.1.t:0 "Venture Colonialism"
- TD_new_world_colonial.1.a:0 "Let's invest into this colony"
- TD_new_world_colonial.1.b:0 "That's too risky, let's find safer alternative instead"
- TD_new_world_colonial.2.t:0 "Local Natives want to trade"
- TD_new_world_colonial.2.a:0 "Let's trade"
- TD_new_world_colonial.2.b:0 "I don't feel like trading with primitives"
+ TD_new_world_colonial.1.desc:0 "The new world is not only attracting desperate people hoping for a new life, but also those who would gladly invest into our colonies. One of those investors came out to us with a proposal - we will grant him funds and he will establish a new town oversea. With his shady reputation and known history of bussiness failures, only a few of our advisors trust him. What should be the verdict?"
+ TD_new_world_colonial.1.a:0 "Let's invest into this colony."
+ TD_new_world_colonial.1.b:0 "That's too risky, let's find safer alternative instead."
+ TD_Colony_will_need_bailing_out_tt:0 "Colony will go bankrupt and need bailing out."
+
+ TD_new_world_colonial.2.t:0 "Local natives want to trade"
+ TD_new_world_colonial.2.desc:0 "Savages from a nearby village recently came to one of our settlements to exchange goods. This relation has been going for some time now and some of our advisors are concerned about the influence the heathens have on our settlement. Should we encourage further trades?"
+ TD_new_world_colonial.2.a:0 "Let them trade."
+ TD_new_world_colonial.2.b:0 "I don't feel like trading with primitives."
  TD_new_world_colonial.2.c:0 "You belong on a plantation!"
- TD_new_world_colonial.3.t:0 "Colonial Investition went bankrupt"
+ TD_trading_with_the_natives:0 "Trading with the natives"
+
+ TD_new_world_colonial.3.t:0 "Bankrupt Colony"
+ TD_new_world_colonial.3.desc:0 "It appears that one of our colonies has been abandoned by none other than the investor who started it, but thankfully he was captured and swiftly executed. Now, the people withouth new settlers lack proper food and supplies will struggle to survive without our help. What shall we do about it?"
  TD_new_world_colonial.3.a:0 "Support the colony"
  TD_new_world_colonial.3.b:0 "Support the colony and change approach"
  TD_new_world_colonial.3.c:0 "Left them to rot"
- TD_new_world_colonial.4.t:0 "Locust Plague destroys local crops"
+ TD_influx_of_cash:0 "Influx of Cash"
+
+ TD_new_world_colonial.4.t:0 "Plague destroys local crops"
+ TD_new_world_colonial.4.desc:0 "Hostile environment of the new world has once again caused problems for our colonists. This time - the crops have been affected by a serious disease which makes them unable to bloom. If we don't respond quickly our colonists will soon starve to death."
  TD_new_world_colonial.4.a:0 "Arrange convoys with food supplies"
  TD_new_world_colonial.4.b:0 "There's nothing we can do"
+
  TD_new_world_colonial.5.t:0 "Surviving the Winter"
+ TD_new_world_colonial.5.desc:0 "Boreal climate of the northern chantlia has proven that it would be extremely hard for a settlement to survive a harsh winter there on its own. If we want our colony to survive and thrive, we must immediately send them additional supplies."
  TD_new_world_colonial.5.a:0 "We must help them survive"
  TD_new_world_colonial.5.b:0 "Reinvest more funds into developing this colony"
  TD_new_world_colonial.5.c:0 "The weak must die."
- TD_new_world_colonial.6.t:0 "Survivng the Drought"
+
+ TD_new_world_colonial.6.t:0 "Surviving the Drought"
+ TD_new_world_colonial.6.desc:0 "Arid climate of the new world has proven that it would be extremely hard for a settlement to survive a harsh drought there on its own. If we want our colony to survive and thrive, we must immediately send them additional supplies."
  TD_new_world_colonial.6.a:0 "We must help them survive"
  TD_new_world_colonial.6.b:0 "Reinvest more funds into developing this colony"
  TD_new_world_colonial.6.c:0 "The weak must die."
+
+
  TD_new_world_colonial.7.t:0 "High Quality Wood"
+ TD_new_world_colonial.7.desc:0 "Wood is a valuable resource. It can be used as a building material, brushwood and even refined and sold as expensive furniture. Because of this, the quality of the wood near the settlement often influences it further growth. This time we managed to settle near a nice forest with strong and reliable wood."
  TD_new_world_colonial.7.a:0 "Use it to increase colony's Self-sustenance"
  TD_new_world_colonial.7.b:0 "Use it to attract more settlers."
+
  TD_new_world_colonial.8.t:0 "Low Quality Wood"
+ TD_new_world_colonial.8.desc:0 "Wood is a valuable resource. It can be used as a building material, brushwood and even refined and sold as expensive furniture. Because of this, the quality of the wood near the settlement often influences it further growth. This time the fate has decided to give us wood of mediocre quality, prone to mold and breaking."
  TD_new_world_colonial.8.a:0 "Import Higher quality wood from different provinces"
  TD_new_world_colonial.8.b:0 "They will have to make it through with what they have"
+
  TD_new_world_colonial.9.t:0 "Taedium-borne Crops don't adapt in New World"
+ TD_new_world_colonial.9.desc:0 "Often, when the farmers travel to the new world for the first time, they want to bring crops from their homeland which are familiar to them in taste and in methods of cultivation. Often this is harmless, but once in a while colonists have to deal with infertile soils and climate unfitting for taedian crops."
  TD_new_world_colonial.9.a:0 "Arrange supplies to affected colonies"
  TD_new_world_colonial.9.b:0 "They have to survive on their own"
+
  TD_new_world_colonial.10.t:0 "Birth of a New Colonial City"
+ TD_new_world_colonial.10.desc:0 "One of our new world settlements has been growing rapidly in the recent times. Whether it was from our efforts, preexisting native infrastructure, favorable environment or simply luck, its importance as a regional hub is unquestionable. This bustling city is attracting more and more old world settlers and serves as a shining example of our colonial successes. We must invest in it even further."
  TD_new_world_colonial.10.a:0 "Invest into it's development"
- TD_new_world_colonial.10.b:0 "Make it focus on a certain trade goods"
+ TD_new_world_colonial.10.b:0 "Direct the production into something more artisan."
  TD_new_world_colonial.10.c:0 "Expand local trade hub"
  
  
- TD_Colony_will_need_bailing_out_tt:0 "Colony will bankrupt in around a year, and will need bailing out."
+
+#localization of event random_events.2 has been moved here.
+random_event.EVTNAME2:1 "Emergent Culture in the Colonies"
+ random_event.EVTDESC2:1 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [talamgalter_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Talamgalter, and this sentiment is beginning to spread throughout [talamgalter_province.GetAreaName]."
+ random_event.EVTDESC2B:0 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [thiccen_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Thiccen, and this sentiment is beginning to spread throughout [thiccen_province.GetAreaName]."
+ random_event.EVTDESC2C:0 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [mexican_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Mexicans, and this sentiment is beginning to spread throughout [mexican_province.GetAreaName]."
+ random_event.EVTDESC2D:0 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [platinean_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Platinean, and this sentiment is beginning to spread throughout [platinean_province.GetAreaName]."
+ random_event.EVTDESC2E:0 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [quebecois_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Québécois, and this sentiment is beginning to spread throughout [quebecois_province.GetAreaName]."
+ random_event.EVTDESC2F:0 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [louisianans_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Louisianans, and this sentiment is beginning to spread throughout [louisianans_province.GetAreaName]."
+ random_event.EVTOPTA2:1 "We should maintain our traditional culture."
+ random_event.EVTOPTB2:1 "Embrace Talamgalter culture."
+ random_event.EVTOPTC2:0 "Embrace Thiccen culture."
+ random_event.EVTOPTE2:0 "Embrace Mexican culture."
+ random_event.EVTOPTF2:0 "Embrace Platinean culture."
+ random_event.EVTOPTG2:0 "Embrace Québécois culture."
+ random_event.EVTOPTH2:0 "Embrace Louisianans culture."
