--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ amsulan_sea_area:0 "Amsulan Gulf"
  northern_furmaria_area:0 "Northern Furmaria"
  southern_furmaria_area:0 "Southern Furmaria"
  camarian_coast_area:0 "Camarian Coast"
@@ -455,3 +456,34 @@
  yasulard_area:0 "Yasulard" 
  ilonard_area:0 "Ilonard"
  kapbald_area:0 "Kapbald"
+ apahlamke_area:0 "Apahlamke"
+ cheka_area:0 "Cheka"
+ ktuhkee_area:0 "Ktuhkee"
+ lower_talamgalt_area:0 "Lower Talamgalt"
+ phelanaire_area:0 "Phelanaire"
+ skenato_area:0 "Skenato"
+ upper_phelanaire_area:0 "Upper Phelanaire"
+ coppaireanach_area:0 "Copaireanach"
+ south_senako_area:0 "South Senako"
+ sinipa_area:0 "Sinipa"
+ yanyah_area:0 "Yanyah"
+
+ apasemaa_area:0 "Apasemaa"
+ delargia_area:0 "Delargia"
+ eadgarland_area:0 "Eadgarland"
+ liemarland_area:0 "Liemarland"
+ new_indrigerland_area:0 "New Indrigerland"
+ shabon_area:0 "Shabon"
+
+ adawnotpa_area:0 "Adawnotpa"
+ datikan_area:0 "Datikan"
+ castamaire_area:0 "Castamaire"
+ new_chaibhea_area:0 "New Chaibhea"
+ creagan_area:0 "Creagan"
+ wasotamek_area:0 "Wasotamek"
+
+ mamshawold_area:0 "Mamshawold"
+ new_ethelnothdun_area:0 "New Ethelnothdun"
+ northern_ethland_area:0 "Northern Ethland"
+ isutland_area:0 "Isutland"
+ mircebrim_area:0 "Mircebrim"
