--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -53,6 +53,7 @@
  argenic_group:0 "Argenic"
  argenian:0 "Argenian"
  niewebehatian:0 "Niewebehatian"
+ thiccen:0 "Thiccen"
  
  western_anavatic_group:0 "Western Anavatic"
  donucian:0 "Donucian"
@@ -81,6 +82,7 @@
  dorchean:0 "Dorchean"
  nabhini:0 "Nabhini"
  oileamer:0 "Oileamer"
+ talamgalter:0 "Talamgalter"
 
  marstonian_group:0 "Marstonian"
  aliger:0 "Aliger"
@@ -253,7 +255,7 @@
  naahuunai:0 "naahuunai"
  kwitala:0 "Kwitala"
 
- momaaki_group:0 "Momaaki Group"
+ momaaki_group:0 "Momaaki"
  bokkoscah:0 "Bokkoscah"
  sinipa:0 "Sinipa"
  sobohali:0 "Sobohali"
