--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -544,7 +544,7 @@
  PROV543:0 "Dichterwald"
  PROV544:0 "Magstadt"
  PROV545:0 "Glinau"
- PROV546:0 "Niheyan Ocean 1"
+ PROV546:0 "Lantan Approach"
  PROV547:0 "Schelazheim"
  PROV548:0 "Keltmark Coast"
  PROV549:0 "Kleindorf"
@@ -750,7 +750,7 @@
  PROV749:0 "Surachow"
  PROV750:0 "Mława"
  PROV751:0 "Zytnik"
- PROV752:0 "752"
+ PROV752:0 "Western Dakhilian Sea"
  PROV753:0 "Strait of Aideich"
  PROV754:0 "Zawila"
  PROV755:0 "Bialogorze"
@@ -1154,7 +1154,7 @@
  PROV1153:0 "Saint Renard's Bay"
  PROV1154:0 "Qarasam Sea"
  PROV1155:0 "1155"
- PROV1156:0 "1156"
+ PROV1156:0 "Hawaldvi Coast"
  PROV1157:0 "1157"
  PROV1158:0 "1158"
  PROV1159:0 "Dakhilian Sea"
@@ -1163,10 +1163,10 @@
  PROV1162:0 "1162"
  PROV1163:0 "1163"
  PROV1164:0 "1164"
- PROV1165:0 "1165"
+ PROV1165:0 "Ktuhke Bay"
  PROV1166:0 "1166"
  PROV1167:0 "1167"
- PROV1168:0 "1168"
+ PROV1168:0 "Mathilda's Bay"
  PROV1169:0 "1169"
  PROV1170:0 "Kuchax"
  PROV1171:0 "Kuatipetl"
@@ -1204,7 +1204,7 @@
  PROV1203:0 "Dahami Bay"
  PROV1204:0 "1204"
  PROV1205:0 "1205"
- PROV1206:0 "1206"
+ PROV1206:0 "Bay of Dochas"
  PROV1207:0 "1207"
  PROV1208:0 "1208"
  PROV1209:0 "1209"
@@ -1218,7 +1218,7 @@
  PROV1217:0 "1217"
  PROV1218:0 "Laabkot"
  PROV1219:0 "1219"
- PROV1220:0 "1220"
+ PROV1220:0 "Galeqan Sea"
  PROV1221:0 "1221"
  PROV1222:0 "1222"
  PROV1223:0 "1223"
@@ -1231,7 +1231,7 @@
  PROV1230:0 "Nefapont"
  PROV1231:0 "Sunbati Coast"
  PROV1232:0 "Hyncae"
- PROV1233:0 "1233"
+ PROV1233:0 "Apahlamke"
  PROV1234:0 "1234"
  PROV1235:0 "Prugos"
  PROV1236:0 "Syrassea"
@@ -1240,7 +1240,7 @@
  PROV1239:0 "Hyrcedos"
  PROV1240:0 "Pellos"
  PROV1241:0 "1241"
- PROV1242:0 "1242"
+ PROV1242:0 "Momaaki Sea"
  PROV1243:0 "Cleideos"
  PROV1244:0 "Synoa"
  PROV1245:0 "Hapheus"
@@ -1395,7 +1395,7 @@
  PROV1394:0 "Smawqar"
  PROV1395:0 "Haqwasi"
  PROV1396:0 "Mushorq'aan Coast"
- PROV1397:0 "1397"
+ PROV1397:0 "Delargian Bay"
  PROV1398:0 "Axandem"
  PROV1399:0 "Barzakhan"
  PROV1400:0 "Burdan"
@@ -1417,12 +1417,12 @@
  PROV1416:0 "1416"
  PROV1417:0 "1417"
  PROV1418:0 "Sipakatli"
- PROV1419:0 "1419"
+ PROV1419:0 "Apaseman Coast"
  PROV1420:0 "Sokialte"
  PROV1421:0 "1421"
  PROV1422:0 "1422"
  PROV1423:0 "Huacipeuh"
- PROV1424:0 "1424"
+ PROV1424:0 "Minisan Bay"
  PROV1425:0 "Yankutlahk"
  PROV1426:0 "Imixtekhla"
  PROV1427:0 "Axoxopan"
@@ -1538,7 +1538,7 @@
  PROV1537:0 "1537"
  PROV1538:0 "1538"
  PROV1539:0 "1539"
- PROV1540:0 "1540"
+ PROV1540:0 "Geslitian Sea"
  PROV1541:0 "1541"
  PROV1542:0 "1542"
  PROV1543:0 "1543"
@@ -1564,9 +1564,9 @@
  PROV1563:0 "1563"
  PROV1564:0 "1564"
  PROV1565:0 "1565"
- PROV1566:0 "1566"
+ PROV1566:0 "Shaboni Coast"
  PROV1567:0 "1567"
- PROV1568:0 "1568"
+ PROV1568:0 "Bradbrem Strait"
  PROV1569:0 "1569"
  PROV1570:0 "1570"
  PROV1571:0 "1571"
@@ -1843,8 +1843,8 @@
  PROV1842:0 "1842"
  PROV1843:0 "1843"
  PROV1844:0 "1844"
- PROV1845:0 "1845"
- PROV1846:0 "1846"
+ PROV1845:0 "Tarhianahcoill"
+ PROV1846:0 "Tarhianahcoill"
  PROV1847:0 "1847"
  PROV1848:0 "1848"
  PROV1849:0 "1849"
@@ -1894,7 +1894,7 @@
  PROV1893:0 "1893"
  PROV1894:0 "1894"
  PROV1895:0 "1895"
- PROV1896:0 "1896"
+ PROV1896:0 "Forswigians"
  PROV1897:0 "1897"
  PROV1898:0 "1898"
  PROV1899:0 "1899"
@@ -1914,9 +1914,9 @@
  PROV1913:0 "1913"
  PROV1914:0 "1914"
  PROV1915:0 "1915"
- PROV1916:0 "1916"
- PROV1917:0 "1917"
- PROV1918:0 "1918"
+ PROV1916:0 "Minisians"
+ PROV1917:0 "Minisians"
+ PROV1918:0 "Minisians"
  PROV1919:0 "1919"
  PROV1920:0 "1920"
  PROV1921:0 "1921"
@@ -2303,7 +2303,7 @@
  PROV2302:0 "2302"
  PROV2303:0 "2303"
  PROV2304:0 "Altismazer"
- PROV2305:0 "2305"
+ PROV2305:0 "Paqucha"
  PROV2306:0 "2306"
  PROV2307:0 "2307"
  PROV2308:0 "2308"
