--- a/localisation/generic_events_l_english.yml
+++ b/localisation/generic_events_l_english.yml
@@ -3821,20 +3821,7 @@
  random_event.EVTDESC1:1 "As the revolutionary war between our rivals in [enemy_country.GetUsableName] and their enemies in [former_colony.GetName] continues, more and more people in our country voice their opinion that we shall not stay idle but instead help those who struggle for freedom in the colonies."
  random_event.EVTOPTA1:0 "We cannot let the people in America be crushed"
  random_event.EVTOPTB1:0 "This is not our war"
- random_event.EVTNAME2:1 "Emergent Culture in the Colonies"
- random_event.EVTDESC2:1 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [american_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Americans, and this sentiment is beginning to spread throughout [american_province.GetAreaName]."
- random_event.EVTDESC2B:0 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [brazilian_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Brazilians, and this sentiment is beginning to spread throughout [brazilian_province.GetAreaName]."
- random_event.EVTDESC2C:0 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [mexican_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Mexicans, and this sentiment is beginning to spread throughout [mexican_province.GetAreaName]."
- random_event.EVTDESC2D:0 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [platinean_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Platinean, and this sentiment is beginning to spread throughout [platinean_province.GetAreaName]."
- random_event.EVTDESC2E:0 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [quebecois_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Québécois, and this sentiment is beginning to spread throughout [quebecois_province.GetAreaName]."
- random_event.EVTDESC2F:0 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [louisianans_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Louisianans, and this sentiment is beginning to spread throughout [louisianans_province.GetAreaName]."
- random_event.EVTOPTA2:1 "Embrace American culture."
- random_event.EVTOPTB2:1 "We should maintain our traditional culture."
- random_event.EVTOPTC2:0 "Embrace Brazilian culture."
- random_event.EVTOPTE2:0 "Embrace Mexican culture."
- random_event.EVTOPTF2:0 "Embrace Platinean culture."
- random_event.EVTOPTG2:0 "Embrace Québécois culture."
- random_event.EVTOPTH2:0 "Embrace Louisianans culture."
+ #random_event.2 moved to TD_01_flavour_colonial
  random_event.EVTNAME3:0 "Traitor in Parliament"
  random_event.EVTDESC3:0 "It has become apparent that an elected member of our government is aligned and aiding the opposition during the war. We would expose and execute him for treason but he is widely supported within the community and it could cause instability."
  random_event.EVTOPTA3:0 "Execute him"
