--- a/localisation/TD_01_flavour_capira_l_english.yml
+++ b/localisation/TD_01_flavour_capira_l_english.yml
@@ -19,16 +19,16 @@
  td_capira.3.b:0 "We need these lands for ourselves!"
 
 ## Territory Liberations
- td.capira.4.t:0 "Returning Pealian Territory"
- td.capira.4.desc:0 "We regained some Pealian territory from Chilverchian invaders and were asked by Pealia to return them."
+ td_capira.4.t:0 "Returning Pealian Territory"
+ td_capira.4.desc:0 "We regained some Pealian territory from Chilverchian invaders and were asked by Pealia to return them."
  td_capira.4.a:0 "Okay"
 
- td.capira.5.t:0 "Returning Abonean Territory"
- td.capira.5.desc:0 "We regained some Abonean territory from Chilverchian invaders and were asked by Aboneo to return them."
+ td_capira.5.t:0 "Returning Abonean Territory"
+ td_capira.5.desc:0 "We regained some Abonean territory from Chilverchian invaders and were asked by Aboneo to return them."
  td_capira.5.a:0 "Okay"
 
- td.capira.6.t:0 "Returning Dagollian Territory"
- td.capira.6.desc:0 "We regained some Dagollian territory from Chilverchian invaders and were asked by Dagolii to return them."
+ td_capira.6.t:0 "Returning Dagollian Territory"
+ td_capira.6.desc:0 "We regained some Dagollian territory from Chilverchian invaders and were asked by Dagolii to return them."
  td_capira.6.a:0 "Okay"
 
 #### Centralising
