--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -12,7 +12,7 @@
 
  emperor_reinforce_imperial_borders_title:0 "Reinforce Borders of The Empire" 
  emperor_reinforce_imperial_borders:0 "Reinforced Borders of The Empire"
- emperor_reinforce_imperial_borders_per_prince:0 "Reinforced Borders of The Empire"
+ emperor_reinforce_imperial_borders_emperor_per_prince:0 "Reinforced Borders of The Empire"
  emperor_reinforce_imperial_borders_desc:0 "The first step to securing stability of The Empire is to secure its borders.\n---\nUnlocks "§YFund Fortification construction§!" diplomatic action\n---"
  demand_additional_levies_title:0 "Demand Additional Levies"
  demand_additional_levies_desc:0 "The Empire is in dire need of manpower to protect the its subject. Our loyal princes will be demanded to offer us additional troops."
@@ -80,7 +80,7 @@
 
  emperor_establish_standing_army_title:0 "Establish Standing Army"
  emperor_establish_standing_army:0 "Established Standing Army"
- emperor_establish_standing_army_per_prince:0 "Established Standing Army"
+ emperor_establish_standing_army_emperor_per_prince:0 "Established Standing Army"
  emperor_establish_standing_army_desc:0 "If the Empire wants to reform into a modern state, it requires a modern army.\n---\n"
  
  emperor_curtail_princely_power_title:0 "Curtain Princely Power"
@@ -102,6 +102,7 @@
  Restrict_Synods:0 "Restrict Synods"
  TD_Imperial_Decree3_tooltip:0 "Restrit organising synods in the Empire"
  emperor_synods_banned:0 "Synods Restricted"
+ emperor_synods_banned_opinion:0 "Synods Banned"
  Bless_Wars:0 "Bless Wars"
  TD_Imperial_Decree4_tooltip:0 "Bless Wars against enemies of the Empire"
  emperor_blessed_war:0 "Blessed Wars"
