--- a/localisation/TD_01_flavour_silvestria_l_english.yml
+++ b/localisation/TD_01_flavour_silvestria_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ #this now obsolete.
  group_silvestrine_ideas:0 "Silvestrine Minor Ideas"
  group_silvestrine_ideas_start:0 "Silvestrine Minor Traditions"
  group_silvestrine_ideas_bonus:0 "Silvestrine Minor Ambition"
@@ -16,3 +17,137 @@
  SILVESTRINE_many_states_of_silvestria_desc:0 "Huge amounts of dukes, princes, counts, barons, bishops and mayors has caused silvestrine diplomatic innovations to emerge. Diplomats are meant to travel swiftly and return after resolving their mission."
  SILVESTRINE_effective_conscription:0 "Effective Conscription"
  SILVESTRINE_effective_conscription_desc:0 "Everything must function like a clock in a silvestrine country - and conscription isn't different. All of the paperwork relating to the conscription helps not only the army, but also bureaucracy related to managing population and censuses."
+
+
+ ostemer_ideas:0 "Ostemer Minor Ideas"
+ ostemer_ideas_bonus:0 "Ostemer Minor Ambitions"
+ ostemer_ideas_start:0 "Ostemer Minor Traditions"
+ ostemer_cradle_of_imperial_renaissance:0 "Cradle of Imperial Renaissance"
+ ostemer_cradle_of_imperial_renaissance_desc:0 "It was through these lands that the ideas of Renaissance spread to the empire thanks to our Camarian merchants."
+ ostemer_salt_industry:0 "Salt Industry"
+ ostemer_salt_industry_desc:0 "Salt is one of the most important goods in preserving the food during long voyages, and thankfully these lands profit greatly from it."
+ ostemer_gate_to_the_empire:0 "Gate to the Empire"
+ ostemer_gate_to_the_empire_desc:0 "Being the easternmost part of the empire has granted us the possibility of monopolising the trade with not only Mezonia, but even Kakigia and Pemenia."
+ ostemer_sailor_schools:0 "Sailor Academies"
+ ostemer_sailor_schools_desc:0 "Not anyone can become a sailor - it requires a great deal of knowledge and experience taught only in the Academies scattered across the Ostemer coast."
+ ostemer_trade_connections:0 "Trade Connections"
+ ostemer_trade_connections_desc:0 "Being the middleman between the Empire and the east we can maintain a good relations with many countries thanks to our 'generous' offers to them."
+ ostemer_advanced_gunmaking_methods:0 "Advanced Gunmaking"
+ ostemer_advanced_gunmaking_methods_desc:0 "Copper mines of Camaria and Felderia combined with the knowledge gathered by our merchants helped us develop innovative methods of gunsmithing."
+ ostemer_spread_of_modern_ideas:0 "Spread of Ideas"
+ ostemer_spread_of_modern_ideas_desc:0 "New ideas come and go every day in these ports and our citizens are accustomed to them constantly changing. If something is discovered in Pemenia, our merchants will know soon eough and spread this knowledge further."
+ felder_ideas:0 "Felder Minor Ideas"
+ felder_ideas_bonus:0 "Felder Minor Ambitions"
+ felder_ideas_start:0 "Felder Minor Traditions"
+ felder_tax_reforms:0 "Tax Reforms"
+ felder_tax_reforms_desc:0 "Tax reforms of the Emperor Albrecht von Shlaufberg had the greatest effect on these lands due to most of local farms being controlled by powerful individuals."
+ felder_renaissance:0 "Felder Reinassance"
+ felder_renaissance_desc:0 "Peaceful and nearly venatic farmlands of Felderia attract many great poets, advisors and artists who serve in the increasingly prestigious courts of local princes."
+ felder_zbojaner_roots:0 "Zbojaner Roots"
+ felder_zbojaner_roots_desc:0 "These territories were originally settled by Zbojaner people and many of our own still have bogilish ancestors. Their folklore and religion is still seen in architecture and art and sometimes even claiming Zbojaner ancestry is seen as prestigious."
+ felder_forest_infantry:0 "Forest Infantry"
+ felder_forest_infantry_desc:0 "Many peasants have experience in traversing and living in the forest, so they will make a great warriors in our army - every leader wishes for a soldier that can feed himself."
+ felder_standing_army:0 "A standing army"
+ felder_standing_army_desc:0 "While expensive in these times, the high prosperity of these lands have allowed us to adopt standing armies earlier than in other parts of the Empire."
+ felder_royal_munition_manufactories:0 "Royal Munition Manufactories"
+ felder_royal_munition_manufactories_desc:0 "Closeness to the imperial capital and regional copper deposits swayed the emperor into investing in local artillery and gun production."
+ felder_absolutism:0 "Felder Absolutism"
+ felder_absolutism_desc:0 "Richness of these lands have made the local elites greedy for power which lead to the strengthening of the prince and diminising the nobility."
+ saelish_ideas:0 "Salish Minor Ideas"
+ saelish_ideas_bonus:0 "Salish Minor Ambitions"
+ saelish_ideas_start:0 "Salish Minor Traditions"
+ saelish_knights:0 "Salish Knights"
+ saelish_knights_desc:0 "'Chivalry is not dead', at least that's what the pompous yet brave knights of Salia say and their effectiveness proves them right most of the time."
+ saelish_reformed_lawmaking:0 "Reformed Lawmaking"
+ saelish_reformed_lawmaking_desc:0 "Slow urbanization has allowed us to adapt the law systems from neighboring princes instead of experimenting on our own."
+ saelish_the_land_of_castles:0 "The Land of Castles"
+ saelish_the_land_of_castles_desc:0 "Many lords wish to live in a castle - rural and hilly terrains of these lands hold the perfect conditions for their desires."
+ saelish_imperial_culture:0 "Imperial Culture"
+ saelish_imperial_culture_desc:0 "People of Salia are often seen as the prime examples of the ideal Sigilians and servants of the emperor."
+ saelish_winemaking:0 "Salish Winemaking"
+ saelish_winemaking_desc:0 "Wine and cider are the drinks of choice of not only the local nobility, but also among the cityfolk, who own many vineyards across the land."
+ saelish_centralisation_of_saelish_region:0 "Centralization of Salia"
+ saelish_centralisation_of_saelish_region_desc:0 "Growing threat of the Geoberic unification made the local princes realise, that they need to act quickly and increase their strength to push them back - even at the cost of their fellow noblemen."
+ saelish_military_engineeering_schools:0 "Modern Military Engineering"
+ saelish_military_engineeering_schools_desc:0 "Mercenary wars taught the empire that the superior firepower was more important than good cavalry. Ever since then, many tried to tame the power of the gunpowder in these lands."
+ upper_magreiner_ideas:0 "Upper Magreiner Ideas"
+ upper_magreiner_ideas_bonus:0 "Upper Magreiner Ambitions"
+ upper_magreiner_ideas_start:0 "Upper Magreiner Traditions"
+ upper_magreiner_heart_of_the_empire:0 "Heart of the Empire"
+ upper_magreiner_heart_of_the_empire_desc:0 "Upper Magreina is where the Via Caroli and Via Magreini cross in the great city of Hegenstadt."
+ upper_magreiner_law_reforms:0 "Law Reforms"
+ upper_magreiner_law_reforms_desc:0 "Closeness to the true imperial domain made this region in much more direct control than the other parts of the empire, keeping the law and order intact. "
+ magreiner_trade:0 "Magreiner Trade"
+ magreiner_trade_desc:0 "Great river of Magreina starts in the high Cacumuds, flows through Adrianburg, Limstadt, Hegenstadt, Magkirche, Magstadt and Kaphenden to finally reach its end in the Bay of Nifthem up north, carrying many important goods and ideas."
+ upper_magreiner_legacy_of_imperial_civil_war:0 "Legacy of the Lippstadt League"
+ upper_magreiner_legacy_of_imperial_civil_war_desc:0 "Brutal but quick war of the Lippstadt League brought not only changes to the imperial power structure, but showed the first signs of the new age weaponry - Alwin von Verun became famous for using wagon warfare which was easily defendable in open terrain typical to the magreiner farmlands."
+ magreiner_imperial_ties:0 "Imperial Ties"
+ magreiner_imperial_ties_desc:0 "many local rulers can quickly travel to the imperial capital and this closeness many times benefited not only princes but also the imperial court."
+ upper_magreiner_cradle_of_imperial_baroque:0 "Cradle of Imperial Baroque"
+ upper_magreiner_cradle_of_imperial_baroque_desc:0 "Baroque, more known in the empire as so-called 'Wahrekunst', was a way for the emperor and tetrarchy to fight against the reformation and show the true power of the empire."
+ development_of_the_upper_magreiner:0 "Development of the Upper Magreiner"
+ development_of_the_upper_magreiner_desc:0 "Fertile farmlands of the Magreina bring us prosperity, but they thanks to the investments of many emperor they are increasingly making us and the empire much more self-sustainable."
+ middle_magreiner_ideas:0 "Middle Magreiner Ideas"
+ middle_magreiner_ideas_bonus:0 "Middle Magreiner Ambitions"
+ middle_magreiner_ideas_start:0 "Middle Magreiner Traditions"
+ middle_magreiner_granary_of_the_empire:0 "Granary of the Empire"
+ middle_magreiner_granary_of_the_empire_desc:0 "Flatlands of northern Silvestria are so fertile that they not only feed the local population, but the wheat and rye are exported to outer reaches of the empire and even outside of it."
+ middle_magreiner_homeland_protection:0 "Homeland Protection"
+ middle_magreiner_homeland_protection_desc:0 "People of these lands wish for their prosperity to remain unscathered without a fight, but even they know they will have to protect it - even if they have to risk their own lifes."
+ middle_magreiner_saelian_tetrarichy_connections:0 "Connections with the Tetrarchy"
+ middle_magreiner_saelian_tetrarichy_connections_desc:0 "Nordkirche is often seen as the most prestigious and powerful of the four electors due to the most recent land grants and overall influence they have over the northern parts of Taedium, which greatly influences the prestige of the region by proxy."
+ middle_magreiner_expanded_royal_court:0 "Expanded Royal Court"
+ middle_magreiner_expanded_royal_court_desc:0 "Influx of gold and silver from selling grain encourages the low and medium nobility to increase the size of their personal courts to show other rulers who is the richest and most powerful."
+ middle_magreiner_refined_artillery_craft:0 "Refiner Artillery Craft"
+ middle_magreiner_refined_artillery_craft_desc:0 "Late XVII century Kriegersteiner interest in artillery and gunpowder also had a large influence on local lords, who often wish to imitate the emperor to gain even just a factor of his splendor."
+ nahtrucer_ideas:0 "Nähtrucer Minor Ideas"
+ nahtrucer_ideas_bonus:0 "Nähtrucer Minor Ambitions"
+ nahtrucer_ideas_start:0 "Nähtrucer Minor Traditions"
+ nahtrucer_northern_frontier:0 "Northern Frontier"
+ nahtrucer_northern_frontier_desc:0 "Harsh life in the swampy Gyrdian forests made our men incredibly trusting in the leadership, because not once they proved to them that the cause they are fighting for is right."
+ nahtrucer_gyrdian_influence:0 "Gyrdian Influence"
+ nahtrucer_gyrdian_influence_desc:0 "Gyrdian stories and culture is slowly making its way in our culture. Many peasants and burghers start to worship Saelius himself and techniques used to effectively exploit the land are more prevalent than ever."
+ nahtrucer_mercenary_competition:0 "Mercenary Competition"
+ nahtrucer_mercenary_competition_desc:0 "Being one of two biggest accumulations of mercenaries in the empire makes the local mercenaries superior thanks to the sheer competition alone. Many of them compete to get hired and our rulers quickly learned to exploit these efforts."
+ nahtrucer_expanded_diplomacy:0 "Expanded Diplomacy"
+ nahtrucer_expanded_diplomacy_desc:0 "Elective Monarchies of the north not only grant us more meritocratic rule and stability of the realm, but also the ability to maintain better relations with greater amount of countries."
+ nahtrucer_improved_fortifications:0 "Improved Fortifications"
+ nahtrucer_improved_fortifications_desc:0 "Despite the swampy and forested terrains of Gyrdia, our engineers quickly adapted and managed to turn these obstacles into an advantage, allowing for better defenses even without major hills and mountains."
+ nahtrucer_reformed_infantry:0 "Reformed Infantry"
+ nahtrucer_reformed_infantry_desc:0 "New military technology brought a need for a new army capable of using this innovative equipement. The time of levies is over - only those with standing, professional armies will thrive."
+ nahtrucer_administrative_reforms:0 "Administrative Reforms"
+ nahtrucer_administrative_reforms_desc:0 "Consolidation of the northern border of the empire demanded from us to establish a proper administration, very different to the old feudal model. We can't no longer allow self-will of local lords and we will rule by law, not by the sword."
+ snaiwatzer_ideas:0 "Snaiwatzer Minor Ideas"
+ snaiwatzer_ideas_bonus:0 "Snaiwatzer Minor Ambitions"
+ snaiwatzer_ideas_start:0 "Snaiwatzer Minor Traditions"
+ snaiwatzer_mining_region:0 "Mining Region"
+ snaiwatzer_mining_region_desc:0 "These lands are responsible for almot three quarters of the entire ore mining and processing. These easily available resources such as iron and coal allow us to cheaply produce equipment for our troops."
+ snaiwatzer_cacumudian_trade:0 "Cacumudian Trade"
+ snaiwatzer_cacumudian_trade_desc:0 "Roads through the Cacumuds mountains are frequently used by Silvestrine and Camarian traders, exchanging ideas and goods. Inhospitability and hard access to through these mountains allows us to easily tax traders if they want to pass."
+ snaiwatzer_mercenary_industry:0 "Mercenary Industry"
+ snaiwatzer_mercenary_industry_desc:0 "Abundance of military resources and constant demand for men-for-hire made Snaiwatz the prime location for mercenary industry to develop."
+ snaiwatzer_mountain_defenses:0 "Natural Defenses"
+ snaiwatzer_mountain_defenses_desc:0 "A bad leader couldn't defend a hill, but a fool couldn't defend a mountain with modern fortifications and well-trained garrison. Many armies inexperienced in fighting in mountains failed to conquer us and this is how we will survive."
+ snaiwatzer_zbojaner_roots:0 "Zbojaner Roots"
+ snaiwatzer_zbojaner_roots_desc:0 "These territories were originally settled by Zbojaner people and many of our own still have Bohemian ancestors. Their folklore and religion is still seen in architecture and art and sometimes even claiming Zbojaner ancestry is seen as prestigious."
+ snaiwatzer_southern_influences:0 "Southern Influences"
+ snaiwatzer_southern_influences_desc:0 "Stories of liberal republics in the south has sparked a dream of a democratic state, especially in lower social classes. They work hard not for their lords, but for their community and themselves - and local rulers know that they need to respect that."
+ snaiwatzer_cradle_of_engineering_schools:0 "High Altitude Constructions"
+ snaiwatzer_cradle_of_engineering_schools_desc:0 "Harsh winters and wild mountains taught the Snaiwatzer people how to not only effectively build good shelters, but also how to conserve resources in case of an emergency."
+ geoberic_ideas:0 "Geoberic Minor Ideas"
+ geoberic_ideas_bonus:0 "Geoberic Minor Ambitions"
+ geoberic_ideas_start:0 "Geoberic Minor Traditions"
+ geoberic_dynastic_elites:0 "Dynastic Elites"
+ geoberic_dynastic_elites_desc:0 "New rulers who came here from Salia after the formation of Ansgarland were detached from the reality of local Glaser population. Even now, when the peninsula is populated by Geoberic people, they see themselves as distinct and unique enough to justify their elitist rule."
+ geoberic_tax_laws:0 "Customary Tax Laws"
+ geoberic_tax_laws_desc:0 "Laws in these lands were never properly written down, but that doesn't mean that they don't exist. Local population feels obliged to pay taxes to pay for their protection, even if they know that the gold will be spend on expensive banquets."
+ geoberic_mountain_resistance:0 "Mountain Resistance"
+ geoberic_mountain_resistance_desc:0 "Hilly terrain of geoberic peninsula makes it very easy to defend against foreign invader. This is also amplified by the natural resilience of our people."
+ geoberic_entrepreneurism:0 "New World Entrepreneurism"
+ geoberic_entrepreneurism_desc:0 "New world is also known by another name - continent of opportunities. Exotic goods travel across the ocean to our ports, from which we can sell them at much higher prices thanks to the demand and fascination of the unknown. "
+ geoberic_industrialism:0 "Early Industrialisation"
+ geoberic_industrialism_desc:0 "The popularisation of manufactories across the land made our magnates eager to search for more efficient production methods and investments."
+ geoberic_clergy_influence:0 "Independent Clergy"
+ geoberic_clergy_influence_desc:0 "Detachment from the matters of the empire and high popularity of liemarian ideas in our people made every man an independent philosopher and our clergy far more open-minded than those backward sigilians."
+ geoberic_nationalism:0 "Geoberic Nationalism"
+ geoberic_nationalism_desc:0 "As the years go by, the national pride among the burghers and nobility is getting stronger. People no longer identify with their religious community, their Emperor and not even their king - they are only loyal to their own nation."
