--- a/localisation/TD_01_flavour_eneratian_l_english.yml
+++ b/localisation/TD_01_flavour_eneratian_l_english.yml
@@ -23,6 +23,12 @@
  PEACE_po_claim_eneratian_emperorship:0 "§VClaim Emperorship§!"
  po_claim_eneratian_emperorship_desc:0 "Our ruler will be considered to be the Eneratian Emperor. We will gain extra fervor from this action."
  CB_ALLOWED_po_claim_eneratian_emperorship:0 "Claiming Emperorship"
+ cb_crusade_no_religion_group_restriction:0 "Holy War"
+ cb_crusade_no_religion_group_restriction_desc:0 "We can declare a holy war against those who not share our faith, either heretics or heathens"
+ 
+ TD_Eneratian_Condemned_heretic_alliance:0 "Condemned our alliance as heretical"
+ TD_Sided_with_heretic_allies:0 "Sided with dissenter ally"
+ TD_Eneratian_called_a_holy_war_on_us:0 "Called for a Holy war against us"
 
  decision_claim_eneratian_emperorship_title:0 "Claim Eneratian Emperorship"
  decision_claim_eneratian_emperorship_desc:0 "Thanks to the absence of the current Eneratian Emperor, our [Root.Monarch.GetTitle] might bid for this prestigious title."
@@ -35,3 +41,43 @@
  elophidians_ho_desc:0 "Originating from Elohpidea in Pamkusea, this order maintains many holdings across the panourgian basin, allowing them to control trade in these areas."
  rescapians_ho:0 "Rescapian Order"
  rescapians_ho_desc:0 "This order was founded by a group of terolian monks, whose sole purpose was the treatment of wounded soldiers and civilians."
+ 
+ TD_Eneratian_Tolerated_Heresy:0 "Tolerated Heresy"
+ TD_Eneratian_utilize_religious_fervor:0 "Reignited Religious Fervor"
+ TD_Eneratian_Simony_found_out:0 "Simony found out"
+ TD_Eneratian_opposed_the_church:0 "Opposed the church Authority"
+ TD_Eneratian_fund_inquisition:0 "Funding the Inquisition"
+ 
+ eneratian.2.t:0 "Conflict of Bishops"
+ eneratian.2.desc:0 " "
+ eneratian.2.a:0 "We should appease the clergy"
+ eneratian.2.b:0 "But he is right!"
+ eneratian.3.t:0 "Regional rites found heretical"
+ eneratian.3.desc:0 " "
+ eneratian.3.a:0 "Condemn the rites"
+ eneratian.3.b:0 "We can let it slide.."
+ eneratian.4.t:0 "Support of Autokefalic Church"
+ eneratian.4.desc:0 " "
+ eneratian.4.a:0 "Let's utilize the religious fervor"
+ eneratian.4.b:0 "Better relocate focus into administrative matters"
+ eneratian.5.t:0 "Bishop opposes our heretical Alliance"
+ eneratian.5.desc:0 " "
+ eneratian.5.a:0 "Use something to change his mind"
+ eneratian.5.b:0 "He is right, we shouldn't ally heretics!"
+ eneratian.6.t:0 "Emperor Reigns in the Church"
+ eneratian.6.desc:0 " "
+ eneratian.6.a:0 "Reorganize the Church"
+ eneratian.6.b:0 "Utilize it to improve our Imperial Legitimacy"
+ eneratian.7.t:0 "Church overpowers the incompetent Emperor"
+ eneratian.7.desc:0 " "
+ eneratian.7.a:0 "There's nothing we can do.."
+ eneratian.7.b:0 "Embrace the authority to keep them at bay!"
+ eneratian.8.t:0 "Local bishop asks for help"
+ eneratian.8.desc:0 " "
+ eneratian.8.a:0 "Help him out"
+ eneratian.8.b:0 "Let's fund the Inquisition instead"
+ eneratian.8.c:0 "I don't think like i am spending any money"
+ eneratian.9.t:0 "The Autokefalic Church calls for a holy war!"
+ eneratian.9.desc:0 " "
+ eneratian.9.a:0 "DEUS VULT!"
+ eneratian.9.b:0 "This alliance is vital to survival of our country, we can't simply turn our backs on them now!"
