--- a/localisation/TD_01_flavour_liemarian_l_english.yml
+++ b/localisation/TD_01_flavour_liemarian_l_english.yml
@@ -30,6 +30,15 @@
  unite_liemarian_community:0 "Strengthen Liemarian Community"
  unite_liemarian_community_DESC:0 "Strength comes from unity, and so we must bring liemarians together and focus on the common enemy."
  
+ TD_Liemarian_illegitimate_episcopate:0 "They have become a Episcopal Controller in an illegitimate way"
+ TD_Liemarian_illegitimate_episcopate_mod:0 "Illegitimate Episcopal Controller"
+ TD_Liemarian_Flourishment_of_Syncretism:0 "Flourishment of Religious Syncretism"
+ TD_Liemarian_Syncretism_Condemned:0 "Religious Syncretism Condemned"
+ TD_Active_Liemarian_missions:0 "Active Liemarian Missionaries"
+ TD_Liemarian_zealot_administration:0 "Liemarian Zealot Administration"
+ TD_Liemarian_church_support:0 "Support of the Liemarian Church"
+ TD_Liemarian_church_abandoned_in_need:0 "Abandoned the Liemarian Church in times of need"
+ 
  liemarian.5.t:0 "The Wirosepan Resurgence"
  liemarian.5.desc:0 "The dying faith of Wirosepan was originally only slightly adapted version of standard Saelian theology, but it soon became a whole new system of beliefs. While popular during its introduction to the isles, thanks to the efforts of dorchean nobility it was replaced by imperial model. This did not however eradicate the religion and during the age of reformation it entered its second golden age of popularity, being practiced not only by rural peasants but also scholars and nobility."
  liemarian.5.a:0 "Interesting."
@@ -39,5 +48,52 @@
  liemarian.6.desc:0 "The dying faith of Wirosepan was originally only slightly adapted version of standard Saelian theology, but it soon became a whole new system of beliefs. While popular during its introduction to the isles, thanks to the efforts of dorchean nobility it was replaced by imperial model. This did not however eradicate the religion and during the age of reformation it entered its second golden age of popularity, being practiced not only by rural peasants but also scholars and nobility."
  liemarian.6.a:0 "Interesting."
  liemarian.6.b:0 "Very, very interesting..."
+ 
+ liemarian.7.t:0 "Cardinal Across the Border"
+ liemarian.7.desc:1 "Sometimes, we have the chance to set something into motion without seeming to have done anything. One such chance has arrived recently, when a cardinal living in [send_cardinal_province.GetName] admitted to an agent from [Root.GetName] that he would consider moving across the border to [receive_cardinal_province.GetName] and support us in the Curia for a price. While this may be tempting, there may be a greater price to pay if we take advantage of this: the wrath of [send_cardinal_province.Owner.GetUsableName], the country he'd be deserting."
+ liemarian.7.a:0 "We will take our chances that they never find out."
+ liemarian.7.b:0 "It is not worth risking, but the man who found him deserves a promotion."
+ liemarian.8.t:0 "Cardinal Bribed to Move"
+ liemarian.8.desc:0 "A cardinal who had previously stayed in [Root.GetName], close to the border, has now moved out of our nation entirely and shifted his allegiance to our neighbors. The [From.GetAdjective] agents who bribed him to betray us probably thought we would not notice their hand in the matter, but they were wrong. This intentional sabotage of our influence in the Curia is unacceptable and will not stand unchallenged."
+ liemarian.8.a:0 "It is an affront to both us and our Church."
+
+ liemarian.9.t:0 "Episcopal Controller found illegitimate!"
+ liemarian.9.desc:0 " "
+ liemarian.9.a:0 "These sigilian spies want to undermine our church's cohesion!"
+ liemarian.9.b:0 "Even if they are not right, we should yield in to avoid another schism."
+ liemarian.10.t:0 "The Flourishment of Religious Syncretism"
+ liemarian.10.desc:0 " "
+ liemarian.10.a:0 "Let it flourish further"
+ liemarian.10.b:0 "Stop it! It's Heretical!"
+ liemarian.11.t:0 "Cardinal opposes church doctrine unity"
+ liemarian.11.desc:0 " "
+ liemarian.11.a:0 "It is what it is"
+ liemarian.11.b:0 "Bribe him to change his stance"
+ liemarian.12.t:0 "Cardinal supports church doctrine unity"
+ liemarian.12.desc:0 " "
+ liemarian.12.a:0 "God bless"
+ liemarian.13.t:0 "Active Liemarian missions"
+ liemarian.13.desc:0 " "
+ liemarian.13.a:0 "Support the missions"
+ liemarian.13.b:0 "Reroute the missionaries into administrative positions"
+ 
+ liemarian.14.t:0 "Liemarian Missions active in our country!" #Events from 14 to 17 reuse the same localisation
+ liemarian.14.desc:0 " "
+ liemarian.14.a:0 "Let them be"
+ liemarian.14.b:0 "Root them out!"
+ liemarian.16.c:0 "Let's adopt this faith!"
+ TD_Liemarian_double_event_chance_tt:0 "If this option is picked, this type of event will fire twice as often until the end of the age of Reformation!"
+ 
+ liemarian.18.t:0 "Episcopal Diplomacy"
+ liemarian.18.desc:0 " "
+ liemarian.18.a:0 "Send an Envoy"
+ liemarian.18.b:0 "Do not send any Envoys"
+ liemarian.18.c:0 "Send generous gifts along with an envoy"
+ 
+ liemarian.19.t:0 "Support of Liemarian Church"
+ liemarian.19.desc:0 " "
+ liemarian.19.a:0 "Bestow our prestige to demand help from our other subjects for them"
+ liemarian.19.b:0 "Lend them money from our coffers"
+ liemarian.19.c:0 "Do not help them"
 
  wirosepan_center_of_reformation:0 "Center of Restoration"
