some provinces some fixes psrt 1

--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -215,7 +215,7 @@
  PROV_ADJ214:0 "Alnithar"
  PROV_ADJ215:0 "Qalish"
  PROV_ADJ216:0 "Alradom"
- PROV_ADJ217:0 "Zawarqabad"
+ PROV_ADJ217:0 "Pasharbad"
  PROV_ADJ218:0 "Barqanah"
  PROV_ADJ219:0 "Abyadard"
  PROV_ADJ220:0 "Zawarqabad"
