--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -215,7 +215,7 @@
  PROV214:0 "Alnithar"
  PROV215:0 "Qalish"
  PROV216:0 "Alradom"
- PROV217:0 "Zawarqabad"
+ PROV217:0 "Pasharbad"
  PROV218:0 "Barqanah"
  PROV219:0 "Abyadard"
  PROV220:0 "Zawarqabad"
