its bitsy tiny amount of changes part 2

--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -60,3 +60,4 @@
  qarabil_tradenode:0 "Qarabil Maior"
  radoriasa_tradenode:0 "Radoriasa"
  upper_moorfluss_tradenode:0 "Upper Moorfluss"
+ forstlic_sea_tradenode:0 "Forstlic Sea"
